<resources>
    <string name="menu_title">Back</string>
    <string name="app_name">ALC 4.0 Phase 1 Challenge</string>
    <string name="action_settings">Settings</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="profile">MY PROFILE</string>
    <string name="welcome">WELCOME TO ALC 4.0</string>
    <string name="title_activity_b">About ALC</string>
    <string name="banner">THE ANDELA LEARNING COMMUNITY</string>
    <string name="p1">A community empowering the next generation of African leaders</string>
    <string name="p2">Join Us!</string>
    <string name="p3">The Andela learning community is a network of people technologists and tech enthusiasts across Africa dedicated to learning how to use technology </string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="myname">Blessings Chizala Ngwira</string>
    <string name="track">Track: Android</string>
    <string name="county">Country: Malawi</string>
    <string name="email">Email: ngwirabless@gmail.com</string>
    <string name="phone">Phone number: +23054873327</string>
    <string name="slack">Slack: @blessingsnhizalangwira</string>
    <string name="imagedescription">Blessings</string>
    <string name="logodescription">logo</string>

</resources>
